fix new Integer(..) e new Double(..)